--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -7,6 +7,7 @@
 *= require admin/sbadmin/metisMenu.min
 *= require admin/sbadmin/morris
 *= require admin/sbadmin/bootstrap-social
+*= require toastr
 
 	
 
