--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -212,7 +212,8 @@
                 <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                 </li>
                 <li class="divider"></li>
-                <li><a  href="logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                <li>
+                <%= link_to("<i class='fa fa-sign-out fa-fw'></i>Logout".html_safe, destroy_user_session_path, :method => :delete) %>
                 </li>
             </ul>
             <!-- /.dropdown-user -->
