products tabel added and product name and client name added dynamically

--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">BS Today admin</a>
+        <a class="navbar-brand" href="#">Sayed Cloth House</a>
     </div>
     <!-- /.navbar-header -->
 
@@ -241,19 +241,16 @@
                 </li>
                 <!-- links for orders -->
                 <li>
-                    <a href="#"><i class="fa fa-shopping-cart fa-fw"></i> Users<span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-user fa-fw"></i>Clients<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="/admin/users">All Users </a>
+                            <a href="/admin/clients">All Clients </a>
                         </li>
                         <li>
-                        <a href="/admin/users/facebook" >
-                            Facebook Users
+                        <a href="/admin/clients/new" >
+                            Add Client
                         </a>
                             
-                        </li>
-                        <li>
-                            <a href="/admin/users/instagram">Instagram Users</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
@@ -268,17 +265,11 @@
                         <li>
                             <a href="/admin/products/new">New Product</a>
                         </li>
-                        <li>
-                            <a href="/admin/products/shoes">Shoes</a>
-                        </li>
-                        <li>
-                            <a href="/admin/products/handbags">HandBags</a>
-                        </li>
                     </ul>
                     <!-- /.nav-second-level -->
-                </li>
+                
                  <!-- links for sizes -->
-                <li>
+               <!--  <li>
                     <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Likes<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
@@ -295,13 +286,14 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Maybes<span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i>Clients<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="/admin/maybes">All maybes</a>
+                            <%#= link_to "add part
+                            y", %>
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <!-- links for Vendors -->
 <!--                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Vendors<span class="fa arrow"></span></a>
