--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -25,7 +25,7 @@
             </thead>
             <tbody>
 
-              <% @admin_users.each_with_index do |admin_user,index| %>
+              <% @admin_user.each_with_index do |admin_user,index| %>
 
                 <tr class="odd gradeX">
                   <td><%= index+1 %></td>
