--- a/app/views/admin/_stats.html.erb
+++ b/app/views/admin/_stats.html.erb
@@ -1,27 +1,28 @@
+<div class="clearfix"></div>
 <div class="row">
     <div class="col-lg-3 col-md-6">
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-comments fa-5x"></i>
+                        <i class="fa fa-user fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">26</div>
-                        <div>New Comments!</div>
+                        <div class="huge"><%= @total_clients%></div>
+                        <div>Total Clients</div>
                     </div>
                 </div>
             </div>
-            <a href="#">
+            <%= link_to admin_clients_path do %>
                 <div class="panel-footer">
                     <span class="pull-left">View Details</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                     <div class="clearfix"></div>
                 </div>
-            </a>
+            <% end %>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+     <div class="col-lg-3 col-md-6">
         <div class="panel panel-green">
             <div class="panel-heading">
                 <div class="row">
@@ -29,21 +30,21 @@
                         <i class="fa fa-tasks fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">12</div>
-                        <div>New Tasks!</div>
+                        <div class="huge"><%= @total_products %></div>
+                        <div>Total products</div>
                     </div>
                 </div>
             </div>
-            <a href="#">
+            <%= link_to admin_products_path do %>
                 <div class="panel-footer">
                     <span class="pull-left">View Details</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                     <div class="clearfix"></div>
                 </div>
-            </a>
+            <% end %>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+   <!-- <div class="col-lg-3 col-md-6">
         <div class="panel panel-yellow">
             <div class="panel-heading">
                 <div class="row">
@@ -86,5 +87,5 @@
                 </div>
             </a>
         </div>
-    </div>
+    </div> -->
 </div>
