--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,6 @@
+<div class="col-lg-12">
+    <h1 class="page-header">Dashboard</h1>
+  </div>
 <%= render 'stats'%>
 <div class="row">
 	<div class="col-md-6">
@@ -7,5 +10,5 @@
 		<div id="chartContainer" ></div>
 	</div>
 </div>
-<%= javascript_include_tag "admin/draw_charts" %>
+<%#= javascript_include_tag "admin/draw_charts" %>
 
