--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -62,8 +62,7 @@
             </ul>
             <!-- /.dropdown-messages -->
         </li>
-        <!-- /.dropdown -->
-        <li class="dropdown">
+       <!--  <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
@@ -139,10 +138,8 @@
                     </a>
                 </li>
             </ul>
-            <!-- /.dropdown-tasks -->
-        </li>
-        <!-- /.dropdown -->
-        <li class="dropdown">
+        </li> -->
+        <!-- <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
@@ -199,8 +196,7 @@
                     </a>
                 </li>
             </ul>
-            <!-- /.dropdown-alerts -->
-        </li>
+        </li> -->
         <!-- /.dropdown -->
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
