order added to sidebar

--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -263,7 +263,19 @@
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
-                
+                </li>
+                  <li>
+                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Order<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li>
+                            <a href="/admin/orders">All Orders</a>
+                        </li>
+                        <li>
+                            <a href="/admin/orders/new">Create Order</a>
+                        </li>
+                    </ul>
+                    <!-- /.nav-second-level -->
+                </li>
                  <!-- links for sizes -->
                <!--  <li>
                     <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Likes<span class="fa arrow"></span></a>
