--- a/app/views/admin/_stats.html.erb
+++ b/app/views/admin/_stats.html.erb
@@ -44,6 +44,28 @@
             <% end %>
         </div>
     </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="panel panel-yellow">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-user fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div class="huge"><%= @total_orders%></div>
+                        <div>Total Orders</div>
+                    </div>
+                </div>
+            </div>
+            <%= link_to admin_orders_path do %>
+                <div class="panel-footer">
+                    <span class="pull-left">View Details</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                    <div class="clearfix"></div>
+                </div>
+            <% end %>
+        </div>
+    </div>
    <!-- <div class="col-lg-3 col-md-6">
         <div class="panel panel-yellow">
             <div class="panel-heading">
