--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -5,56 +5,64 @@
        Create Order
       </div>
       <div class="panel-body">
-        <div class="row">
-          <%= nested_form_for [:admin, @admin_order] do |f| %>
-            <div class="col-md-6">
-              <div class="form-group">
+        <%= nested_form_for [:admin, @admin_order] do |f| %>
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
               <%= f.label :client_id%>
               <%= f.select :client_id, options_for_select(Client.all.collect { | client | [client.name, client.id] }, f.object.client.try(:id)), {}, {:class => 'form-control' } %>
             </div>
-              <%= f.fields_for :line_items do |line_item| %>
-                <div class="form-group">
+            <div class="col-md-6 mb-3">
+              <%= f.label :shipping_charges %>
+                  <%= f.text_field :shipping_charges ,class: 'form-control', placeholder: 'Enter Shipping Charges If Any'%>
+              </div>
+            </div>
+            <%= f.fields_for :line_items do |line_item| %>
+              <div class="form-row">
+                <div class="col-md-4 mb-3" style="margin-top: 20px;">
                   <%=line_item.label :quantity%>
                   <%=line_item.text_field :quantity ,class: 'form-control', placeholder: 'Enter Quantity', required: 'true'%>
                 </div>
-                <div class="form-group">
+                <div class="col-md-4 mb-3" style="margin-top: 20px;">
                   <%=line_item.label :size%>
                   <%=line_item.text_field :size ,class: 'form-control', placeholder: 'Enter Size', required: 'true'%>
                 </div>
-                <div class="form-group">
+                <div class="col-md-4 mb-3" style="margin-top: 20px;">
                   <%=line_item.label :product_id%>
                   <%= line_item.select :product_id, options_for_select(Product.all.collect { | product | [product.name, product.id] }, line_item.object.product.try(:id)), {}, {:class => 'form-control' } %>
                 </div>
-                <div class="form-group">
+              </div>
+              <div class="form-row">
+                <div class="col-md-3 mb-3" style="margin-top: 20px;">
                   <%=line_item.label :than%>
                   <%=line_item.text_field :than ,class: 'form-control', placeholder: 'Enter Number Thans', required: 'true'%>
                 </div>
-                <div class="form-group">
+                <div class="col-md-3 mb-3" style="margin-top: 20px;">
                   <%=line_item.label :gaz_per_than%>
                   <%=line_item.text_field :gaz_per_than ,class: 'form-control', placeholder: 'Enter Gaz Per Than', required: 'true'%>
                 </div>
-                <div class="form-group">
+              
+                <div class="col-md-3 mb-3" style="margin-top: 20px;">
                   <%=line_item.label :meter%>
                   <%=line_item.text_field :meter ,class: 'form-control', placeholder: 'Enter Number Of Meters', required: 'true'%>
                 </div>
-                <div class="form-group">
+                <div class="col-md-3 mb-3" style="margin-top: 20px;">
                   <%=line_item.label :price_per_meter%>
                   <%=line_item.text_field :price_per_meter ,class: 'form-control', placeholder: 'Enter Rate/meter', required: 'true'%>
                 </div>
-                <%= line_item.link_to_remove "Remove this product" %>
-              <% end %>
-               <div class="form-group">
-                <%= f.label :shipping_charges %>
-                <%= f.text_field :shipping_charges ,class: 'form-control', placeholder: 'Enter Shipping Charges If Any'%>
               </div>
-              <p><%= f.link_to_add "Add product", :line_items, class: "btn btn-primary"  %></p>
-              <%= f.submit 'Submit Button', class: "btn btn-default" %>
-              <button type="reset" class="btn btn-default">Reset Button</button>
-              <a  href="/admin/products" class="btn btn-default">Back</a>
-            </div>
-
-          <%end%>
-        </div>
+              <div class="form-row">
+                <div class="col-md-12 text-center" style="margin-top: 20px; clear: both;">
+                  <%= line_item.link_to_remove "Remove this product", class: "btn btn-danger" %>
+                </div>
+              </div>
+              
+            <% end %>
+            <hr>
+           <p><%= f.link_to_add "Add Another Product", :line_items, class: "btn btn-primary"  %></p>
+           <%= f.submit 'Submit Button', class: "btn btn-default" %>
+            <button type="reset" class="btn btn-default">Reset Button</button>
+            <a  href="/admin/products" class="btn btn-default">Back</a>
+        <% end %>
       </div>        
     </div>
   </div>    
