--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -236,6 +236,21 @@
                     <a href="/admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
                 <!-- links for orders -->
+                    <li>
+                    <a href="#"><i class="fa fa-user fa-fw"></i>Vendors<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li>
+                            <a href="/admin/vendors">All Vendors </a>
+                        </li>
+                        <li>
+                        <a href="/admin/vendors/new" >
+                            Add Vendor
+                        </a>
+                            
+                        </li>
+                    </ul>
+                    <!-- /.nav-second-level -->
+                </li>
                 <li>
                     <a href="#"><i class="fa fa-user fa-fw"></i>Clients<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
