--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -12,42 +12,33 @@
               <%= f.select :client_id, options_for_select(Client.all.collect { | client | [client.name, client.id] }, f.object.client.try(:id)), {}, {:class => 'form-control' } %>
             </div>
             <div class="col-md-6 mb-3">
-              <%= f.label :shipping_charges %>
+              <label>Cargo Charges</label>
                   <%= f.text_field :shipping_charges ,class: 'form-control', placeholder: 'Enter Shipping Charges If Any'%>
               </div>
             </div>
             <%= f.fields_for :line_items do |line_item| %>
               <div class="form-row">
-                <div class="col-md-4 mb-3" style="margin-top: 20px;">
-                  <%=line_item.label :quantity%>
-                  <%=line_item.text_field :quantity ,class: 'form-control', placeholder: 'Enter Quantity', required: 'true'%>
-                </div>
-                <div class="col-md-4 mb-3" style="margin-top: 20px;">
-                  <%=line_item.label :size%>
-                  <%=line_item.text_field :size ,class: 'form-control', placeholder: 'Enter Size', required: 'true'%>
-                </div>
-                <div class="col-md-4 mb-3" style="margin-top: 20px;">
+              
+
+                <div class="col-md-12 mb-12" style="margin-top: 20px;">
                   <%=line_item.label :product_id%>
-                  <%= line_item.select :product_id, options_for_select(Product.all.collect { | product | [product.name, product.id] }, line_item.object.product.try(:id)), {}, {:class => 'form-control' } %>
+                  <%= line_item.select :product_id, options_for_select(Product.all.collect { | product | [product.name, product.id] }, line_item.object.product.try(:id)), {include_blank: '-choose product-' }, {:class => 'form-control' , id: "select-product_#{line_item.index}", onChange: "get_price('#{line_item.index}')" } %>
                 </div>
               </div>
               <div class="form-row">
-                <div class="col-md-3 mb-3" style="margin-top: 20px;">
+                <div class="col-md-4 mb-4" style="margin-top: 20px;">
                   <%=line_item.label :than%>
                   <%=line_item.text_field :than ,class: 'form-control', placeholder: 'Enter Number Thans', required: 'true'%>
                 </div>
-                <div class="col-md-3 mb-3" style="margin-top: 20px;">
+                <div class="col-md-4 mb-4" style="margin-top: 20px;">
                   <%=line_item.label :gaz_per_than%>
                   <%=line_item.text_field :gaz_per_than ,class: 'form-control', placeholder: 'Enter Gaz Per Than', required: 'true'%>
                 </div>
               
-                <div class="col-md-3 mb-3" style="margin-top: 20px;">
-                  <%=line_item.label :meter%>
-                  <%=line_item.text_field :meter ,class: 'form-control', placeholder: 'Enter Number Of Meters', required: 'true'%>
-                </div>
-                <div class="col-md-3 mb-3" style="margin-top: 20px;">
+               
+                <div class="col-md-4 mb-4" style="margin-top: 20px;">
                   <%=line_item.label :price_per_meter%>
-                  <%=line_item.text_field :price_per_meter ,class: 'form-control', placeholder: 'Enter Rate/meter', required: 'true'%>
+                  <%=line_item.text_field :price_per_meter ,class: 'form-control price_per_meter',id: "price_per_meter_"+"#{line_item.index}", placeholder: 'Enter Rate/meter', required: 'true'%>
                 </div>
               </div>
               <div class="form-row">
@@ -67,3 +58,15 @@
     </div>
   </div>    
 </div>
+<script type="text/javascript">
+  function get_price(index){
+    productId = $('#select-product_'+index).val()
+    $.ajax({
+      url: '/admin/products/get_price',
+      data: { id: productId, index: index },
+      method: "GET"
+      
+    })
+  }
+
+</script>
