--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -13,9 +13,9 @@
                   <%= f.select(:name, Product::PRODUCT_NAMES , {}, { :class => 'form-control' }) %>
               </div>
               <div class="form-group">
-              <%=f.label :client_id%>
+              <%=f.label :vendor_id%>
               
-              <%= f.select :client_id, options_for_select(Client.all.collect { | client | [client.name, client.id] }, f.object.client.try(:id)), {}, {:class => 'form-control' } %>
+              <%= f.select :vendor_id, options_for_select(Vendor.all.collect { | vendor | [vendor.name, vendor.id] }, f.object.vendor.try(:id)), {}, {:class => 'form-control' } %>
               </div>
               <div class="form-group">
                 <%=f.label :rate%>
