--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -13,7 +13,7 @@
             </div>
             <div class="col-md-6 mb-3">
               <label>Cargo Charges</label>
-                  <%= f.text_field :shipping_charges ,class: 'form-control', placeholder: 'Enter Shipping Charges If Any'%>
+                  <%= f.number_field :shipping_charges ,class: 'form-control', placeholder: 'Enter Shipping Charges If Any', min: 0%>
               </div>
             </div>
             <%= f.fields_for :line_items do |line_item| %>
