--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
-  <div class="col-lg-12">
-    <h1 class="page-header">All Orders</h1>
+  <div class="col-lg-12 header-print">
+    <h1 class="page-header">Order #<%= @admin_order.id %></h1>
   </div>
   
 </div>
@@ -14,7 +14,7 @@
       </div>
       <div class="panel-body">
         <div class="dataTable_wrapper">
-          <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+          <table width="100%" class="table table-striped table-bordered table-hover print-area" id="dataTables-example">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -41,7 +41,9 @@
                   <td><%= line_item.line_total %></td>
                   
                 </tr>
-              <%end%>                                                                             
+              <%end%>  
+
+              </div>                                                                           
             </tbody>
           </table>
         </div>
@@ -49,3 +51,47 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-lg-6">
+    <button class="btn btn-primary" onclick="print()" style="float: left;">Print</button>
+  </div>
+  <div class="col-lg-6 grand_total_print">
+    <span style="float: right;">
+     <strong>Total:</strong> Rs.  <%= @admin_order.total_without_cargo %>
+    </span>
+    <br>
+    <span style="float: right;">
+     <strong>Cargo Charges:</strong>  Rs. <%= @admin_order.shipping_charges.to_i %>
+    </span>
+    <br>
+    <span style="float: right;">
+     <strong>Cargo Charges:</strong> Rs. <%= @admin_order.grand_total %>
+    </span>
+  </div>
+</div>
+<style type="text/css">
+  @media print {
+  body * {
+    visibility: hidden;
+  }
+  .grand_total_print * {
+    visibility: visible;
+  }
+  .grand_total_print {
+    padding-top: 40px;
+  }
+  .print-area  * {
+    visibility: visible;
+  }
+  .header-print * {
+     visibility: visible;
+  }
+  .print-area {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+</style>
+
