First Complete Deployment for Sayeed Store

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -8,6 +8,8 @@
 *= require admin/sbadmin/morris
 *= require admin/sbadmin/bootstrap-social
 *= require toastr
+*= require select2
+*= require select2-bootstrap
 
 	
 
