--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -7,23 +7,28 @@
       <div class="panel-body">
         <%= nested_form_for [:admin, @admin_order] do |f| %>
           <div class="form-row">
-            <div class="col-md-6 mb-3">
+            <div class="col-md-4 mb-3">
               <%= f.label :client_id%>
               <%= f.select :client_id, options_for_select(Client.all.collect { | client | [client.name, client.id] }, f.object.client.try(:id)), {}, {:class => 'form-control' } %>
             </div>
-            <div class="col-md-6 mb-3">
+            <div class="col-md-4 mb-3">
               <label>Cargo Charges</label>
                   <%= f.number_field :shipping_charges ,class: 'form-control', placeholder: 'Enter Shipping Charges If Any', min: 0%>
+              </div>
+               <div class="col-md-4 mb-3">
+              <label>Gazana Number</label>
+                  <%= f.number_field :gazana_num ,class: 'form-control', placeholder: 'Enter Gazana Number'%>
               </div>
             </div>
             <%= f.fields_for :line_items do |line_item| %>
               <div class="form-row">
               
 
-                <div class="col-md-12 mb-12" style="margin-top: 20px;">
-                  <%=line_item.label :product_id%>
-                  <%= line_item.select :product_id, options_for_select(Product.all.collect { | product | [product.name, product.id] }, line_item.object.product.try(:id)), {include_blank: '-choose product-' }, {:class => 'form-control' , id: "select-product_#{line_item.index}", onChange: "get_price('#{line_item.index}')" } %>
-                </div>
+              <div class="col-md-12 mb-12" style="margin-top: 20px;">
+                <%=line_item.label :product_id%>
+                <%= line_item.select :product_id, Product.all.collect { | product | [product.name, product.id]} ,{:disabled => Product.out_of_stock ,include_blank: '-choose product-' } , {:class => 'form-control' , id: "select-product_#{line_item.index}", onChange: "get_price('#{line_item.index}')"} %>
+                <%#= line_item.select :product_id, options_for_select(Product.all.collect { | product | [product.name, product.id] }, { line_item.object.product.try(:id),:disabled => Product.out_of_stock }), {include_blank: '-choose product-' }, {:class => 'form-control' , id: "select-product_#{line_item.index}", onChange: "get_price('#{line_item.index}')" } %>
+              </div>
               </div>
               <div class="form-row">
                 <div class="col-md-4 mb-4" style="margin-top: 20px;">
@@ -48,6 +53,7 @@
               </div>
               
             <% end %>
+            <%= f.hidden_field :order_type, value: "order" %>
             <hr>
            <p><%= f.link_to_add "Add Another Product", :line_items, class: "btn btn-primary"  %></p>
            <%= f.submit 'Submit Button', class: "btn btn-default" %>
@@ -68,5 +74,7 @@
       
     })
   }
+
+  
 
 </script>
