--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -291,6 +291,18 @@
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
+                <li>
+                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i>Return Invoice<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li>
+                            <a href="/admin/return_orders">All Return Invoices</a>
+                        </li>
+                        <li>
+                            <a href="/admin/return_orders/new">Create Return Invoice</a>
+                        </li>
+                    </ul>
+                    <!-- /.nav-second-level -->
+                </li>
                  <!-- links for sizes -->
                <!--  <li>
                     <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Likes<span class="fa arrow"></span></a>
